Fix javac deprecated and unchecked warnings